# neural-network

./: Makefile  pyproject.toml
.github/workflows/: python-app.yml
neural_network/: mnist.py
tests/: test_mnist.py
